welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
    return
    ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit){
  ^